Make second and third sections of landing

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,9 +1,49 @@
 <div class="row">
 	<div class="col-12 my-col">
-		<div class="section-block">
+		<div class="heading-section">
       <div class="section-border">
+        <h3 class="text-heading">Welcome to</h3>
+        <h1 class="text-heading--big">The Art Of Dress</h1>
         <div class="section-inner-img">
            <div class="inner-img-icon"></div>
+        </div>
+      </div>
+    </div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-12 my-col">
+		<div class="begin-section">
+      <div class="section-border">
+        <p class="begin-section-text"><span class="capital-letter"></span>n earth we have gravity, magnetism and all the realities of nature.
+          We live within the world of these realities.</p>
+        <div class="img-border  img-border-up"></div>
+        <div class="begin-section-inner-img"></div>
+        <div class="img-border img-border-down"></div>
+        <p class="begin-section-text">The Art of Dress defines inner realities that manifest in your physical body,
+        allowing you to navigate life with understanding and intention.</p>
+      </div>
+    </div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-12 my-col">
+		<div class="options-section">
+      <div class="section-border">
+        <h3 class="options-section-title">THE ART OF DRESS</h3>
+        <div class="options-row">
+          <div class="option-block">
+            <span class="option-block-title">STYLE</span>
+            <span class="option-block-subtitle">Reflects Your Body</span>
+          </div>
+          <div class="option-block">
+            <span class="option-block-title">COLOUR</span>
+            <span class="option-block-subtitle">Projects Your Soul</span>
+          </div>
+          <div class="option-block">
+            <span class="option-block-title">ARTISTRY</span>
+            <span class="option-block-subtitle">Embraces Your Spirit</span>
+          </div>
         </div>
       </div>
     </div>
