--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,51 +1,323 @@
+@font-face {
+    font-family: 'goudy_old_stylebold';
+    src: url('../../assets/Fonts/goudy-style-bold/911fonts.com_goudyoldstylebold__-_911fonts.com_fonts_6fnh-webfont.woff2') format('woff2'),
+         url('../../assets/Fonts/goudy-style-bold/911fonts.com_goudyoldstylebold__-_911fonts.com_fonts_6fnh-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'blackinitialtextregular';
+    src: url('../../assets/Fonts/custom/blackinitialtext-webfont.woff2') format('woff2'),
+         url('../../assets/Fonts/custom/blackinitialtext-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'goudy_old_stylebold_italic';
+    src: url('../../assets/Fonts/goudy-style-bold-italic/goudy_old_style_bold_italic-webfont.woff2') format('woff2'),
+         url('../../assets/Fonts/goudy-style-bold-italic/goudy_old_style_bold_italic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'goudy_old_style_small_caps_Rg';
+    src: url('../../assets/Fonts/goudy-caps/goudy_old_style_small_caps__ol_regular-webfont.woff2') format('woff2'),
+         url('../../assets/Fonts/goudy-caps/goudy_old_style_small_caps__ol_regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@mixin full-size-img-with-border($url) {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  border: 5px solid black;
+  background-image: url($url);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@mixin curly-border {
+  background-image: url('../../assets/newAssets/Frame1/backchange.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+}
+@mixin flex-column-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .my-col {
   height: 100vh;
-  .section-block {
-    height: 100%;
-    width: 100%;
-    position: relative;
-    border: 5px solid black;
-    background-image: url('../../assets/newAssets/Frame1/back1.png');
-    background-repeat: no-repeat, repeat-x;
-    background-size: cover;
-    .section-border {
-      background-image: url('../../assets/newAssets/Frame1/backchange.png');
+}
+.heading-section {
+  @include full-size-img-with-border('../../assets/newAssets/Frame1/back1.png');
+  .section-border {
+    @include curly-border;
+    .text-heading {
+      font-family: 'goudy_old_stylebold';
+      font-size: 36px;
+      color: black;
+      padding-top: 1em;
+    }
+    .text-heading--big {
+      font-family: 'blackinitialtextregular';
+      font-size: 50px;
+      color: black;
+    }
+    .section-inner-img {
+      background-image: url('../../assets/newAssets/Frame1/Frame1.png');
       background-repeat: no-repeat;
       background-size: 100% 100%;
-      height: 100%;
-      width: 100%;
-      .section-inner-img {
-        background-image: url('../../assets/newAssets/Frame1/Frame1.png');
+      background-position: center center;
+      height: 50%;
+      width: 65%;
+      border: 3px solid black;
+      position: absolute;
+      top: 55%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      .inner-img-icon {
+        background-image: url('../../assets/newAssets/Frame1/circle2.png');
         background-repeat: no-repeat;
         background-size: 100% 100%;
         background-position: center center;
-        height: 50%;
-        width: 65%;
-        border: 3px solid black;
+        padding-top: 15%;
+        min-width: 15%;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        .inner-img-icon {
-          background-image: url('../../assets/newAssets/Frame1/circle2.png');
+      }
+    }
+  }
+}
+
+.begin-section {
+  @include full-size-img-with-border('../../assets/newAssets/Frame2/Frame-2.png');
+  .section-border {
+    @include curly-border;
+    @include flex-column-center;
+    .begin-section-text{
+      font-family: 'goudy_old_stylebold_italic';
+      font-size: 30px;
+      color: black;
+      width: 60%;
+      .capital-letter {
+        display: inline-block;
+        background-image: url('../../assets/newAssets/Frame2/O.png');
+        background-repeat: no-repeat;
+        background-size: 40px 50px;
+        width: 40px;
+        height: 50px;
+        margin-bottom: -20px;
+      }
+    }
+    .img-border {
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      background-position: center center;
+      width: 20%;
+      height: 10%;
+    }
+    .img-border-up {
+      background-image: url('../../assets/newAssets/Frame2/picture-arrow-up.png');
+      margin-bottom: -10px;
+      margin-top: 20px;
+    }
+    .img-border-down {
+      background-image: url('../../assets/newAssets/Frame2/picture-arrow-down.png');
+      margin-top: -10px;
+      margin-bottom: 20px;
+    }
+    .begin-section-inner-img {
+      background-image: url('../../assets/newAssets/Frame2/BEGIN.png');
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      background-position: center center;
+      height: 15%;
+      width: 30%;
+      border: 3px solid black;
+    }
+  }
+}
+.options-section {
+  @include full-size-img-with-border('../../assets/newAssets/Frame3/Frame-3.png');
+  .section-border {
+    @include curly-border;
+    .options-section-title{
+      font-family: 'goudy_old_style_small_caps_Rg';
+      font-size: 30px;
+      font-weight: 600;
+      color: black;
+      text-align: center;
+      padding-top: 5em;
+      letter-spacing: 2px;
+    }
+    .options-row {
+      margin-top: 2em;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      .option-block {
+        border: 3px solid black;
+        font-size: 40px;
+        width: 25%;
+        height: 100px;
+        background-color: white;
+        position: relative;
+        @include flex-column-center;
+        justify-content: space-around;
+        &:nth-child(2) {
+          margin-left: 3%;
+          margin-right: 3%;
+        }
+        &:before, &:after {
+          content: "";
+          display: block;
           background-repeat: no-repeat;
           background-size: 100% 100%;
           background-position: center center;
-          padding-top: 15%;
-          min-width: 15%;
+          width: 70%;
+          height: 60%;
           position: absolute;
-          top: 50%;
           left: 50%;
-          transform: translate(-50%, -50%);
+          transform: translateX(-50%);
+        }
+        &:before {
+          background-image: url('../../assets/newAssets/Frame2/picture-arrow-up.png');
+          top: -57%;
+        }
+        &:after {
+          background-image: url('../../assets/newAssets/Frame2/picture-arrow-down.png');
+          top: 97%;
+        }
+        .option-block-title {
+          font-family: 'goudy_old_style_small_caps_Rg';
+          font-size: 1em;
+          line-height: 1em;
+        }
+        .option-block-subtitle {
+          font-family: 'goudy_old_stylebold_italic';
+          font-size: 0.5em;
+          line-height: 1;
+          margin-bottom: 15px;
         }
       }
     }
   }
 }
 
-
-@media screen and (max-width:775px){
+@media screen and (min-width:2000px){
   .my-col {
     height: 60vh;
   }
+  .heading-section {
+    .section-border {
+      .text-heading {
+        font-size: 42px;
+        padding-top: 1em;
+      }
+      .text-heading--big {
+        font-size: 55px;
+      }
+    }
+  }
+  .begin-section {
+    .section-border {
+      .begin-section-text{
+        font-size: 35px;
+        width: 60%;
+      }
+    }
+  }
+
+}
+@media screen and (max-width:992px){
+  .begin-section {
+    .section-border {
+      .begin-section-text{
+        font-size: 28px;
+        width: 60%;
+      }
+      .img-border-up {
+        margin-top: 0;
+      }
+      .img-border-down {
+        margin-bottom: 0;
+      }
+    }
+  }
+  .options-section {
+    .section-border {
+      .options-row {
+        .option-block {
+          width: 30%;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width:768px){
+  .my-col {
+    height: 60vh;
+  }
+.begin-section {
+    .section-border {
+      .begin-section-text{
+        padding-top: 20px;
+        font-size: 20px;
+        width: 65%;
+      }
+      .img-border {
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        background-position: center center;
+        width: 20%;
+        height: 10%;
+      }
+      .img-border-up {
+        background-image: url('../../assets/newAssets/Frame2/picture-arrow-up.png');
+        margin-bottom: -10px;
+        margin-top: 0;
+      }
+      .img-border-down {
+        background-image: url('../../assets/newAssets/Frame2/picture-arrow-down.png');
+        margin-top: -10px;
+        margin-bottom: 0;
+      }
+      .begin-section-inner-img {
+        background-image: url('../../assets/newAssets/Frame2/BEGIN.png');
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        background-position: center center;
+        height: 20%;
+        width: 30%;
+        border: 3px solid black;
+      }
+    }
+  }
+  .options-section {
+    .section-border {
+      .options-section-title{
+        font-size: 24px;
+        padding-top: 4em;
+      }
+      .options-row {
+        .option-block {
+          font-size: 24px;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 576px) {
+
 }
