Make last sections

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -152,3 +152,14 @@
     </div>
 	</div>
 </div>
+<div class="row">
+	<div class="col-12 my-col">
+		<div class="last-section">
+      <div class="section-border">
+        <div class="text-heading-logo"></div>
+        <div class="central-block"></div>
+        <p class="last-section-text">Self-Determine Your Style, Colour Element & Artistry. Deepen Your Understanding of Self.</p>
+      </div>
+    </div>
+	</div>
+</div>
