--- a/src/app/auth/login-modal/login-modal.component.html
+++ b/src/app/auth/login-modal/login-modal.component.html
@@ -19,9 +19,10 @@
         ngModel
         required
         email
-        #email="ngModel">
+        #email="ngModel"
+        [ngClass]="{'input-error': !email.valid && email.touched || errors.non_field_error}">
     </div>
-    <div *ngIf="!email.valid && email.touched">Please enter a valid value</div>
+    <div *ngIf="!email.valid && email.touched" class="validate-error">Please enter a valid value</div>
     <div class="form-group">
       <label for="password">Password</label>
       <input
@@ -30,12 +31,13 @@
         id="password"
         name="password"
         placeholder="Password"
-        autocomplete="current-password"
+        autocomplete="new-password"
         ngModel
         required
-        #password="ngModel">
+        #password="ngModel"
+        [ngClass]="{'input-error': errors.non_field_error}">
     </div>
-    <div *ngIf="errors.password && errors.password.length">{{ errors }}</div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <div *ngIf="errors && errors.non_field_error" class="validate-error">{{errors.non_field_error}}</div>
+    <button type="submit" [disabled]="!email.valid || !password.value" class="btn btn-primary">Login</button>
   </div>
 </form>
