--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-image: url('assets/newAssets/7671.jpg');
+  background-position: center;
+  background-size: 100% 100%;
+  background-repeat: repeat-y;
+  width: 100vw;
+  height: 100vh;
+}
