--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -2,7 +2,7 @@
 <div class="row">
 	<div class="col-12 my-col">
 		<div class="heading-section">
-      <div class="section-border">
+      <div class="heading-section-border curly-border">
         <h3 class="text-heading">Welcome to</h3>
         <div class="text-heading-logo"></div>
         <div class="section-inner-img">
@@ -15,13 +15,13 @@
 <div class="row">
 	<div class="col-12 my-col">
 		<div class="begin-section">
-      <div class="section-border">
-        <p class="begin-section-text"><span class="capital-letter"></span>n earth we have gravity, magnetism and all the realities of nature.
+      <div class="begin-section-border curly-border">
+        <p class="section-text"><span class="capital-letter"></span>n earth we have gravity, magnetism and all the realities of nature.
           We live within the world of these realities.</p>
-        <div class="img-border  img-border-up"></div>
-        <div class="begin-section-inner-img"></div>
-        <div class="img-border img-border-down"></div>
-        <p class="begin-section-text">The Art of Dress defines inner realities that manifest in your physical body,
+        <div class="central-row-wrapper">
+          <div class="central-block central-row"></div>
+        </div>
+        <p class="section-text">The Art of Dress defines inner realities that manifest in your physical body,
         allowing you to navigate life with understanding and intention.</p>
       </div>
     </div>
@@ -30,8 +30,8 @@
 <div class="row">
 	<div class="col-12 my-col">
 		<div class="options-section">
-      <div class="section-border">
-        <h3 class="options-section-title">THE ART OF DRESS</h3>
+      <div class="curly-border">
+        <h3 class="section-title">THE ART OF DRESS</h3>
         <div class="options-row">
           <div class="option-block">
             <span class="option-block-title">STYLE</span>
@@ -53,8 +53,9 @@
 <div class="row">
 	<div class="col-12 my-col">
 		<div class="symbols-section">
-      <div class="section-border">
-        <h3 class="symbols-section-title">THERE ARE THIRTEEN STYLES</h3>
+      <div class="curly-border">
+        <h3 class="section-title">THERE ARE THIRTEEN STYLES</h3>
+        <div class="central-row-wrapper">
           <div class="central-row">
             <img src="../../assets/newAssets/Frame4/1-Style-Symbol-Refined-Dramatic.png" class="symbol-img" alt="">
             <img src="../../assets/newAssets/Frame4/2-Style-Symbol-True-Dramatic.png" class="symbol-img" alt="">
@@ -70,7 +71,8 @@
             <img src="../../assets/newAssets/Frame4/12-Style-Symbol-True-Romantic.png" class="symbol-img" alt="">
             <img src="../../assets/newAssets/Frame4/13-Style-Symbol-Elaborate-Romantic.png" class="symbol-img" alt="">
           </div>
-        <p class="symbols-section-text">In Our Styles We Connect to Our Bodies, Our Most Sacred Possessions.</p>
+        </div>
+        <p class="section-text">In Our Styles We Connect to Our Bodies, Our Most Sacred Possessions.</p>
       </div>
     </div>
 	</div>
@@ -78,8 +80,9 @@
 <div class="row">
 	<div class="col-12 my-col">
 		<div class="colours-section">
-      <div class="section-border">
-        <h3 class="colours-section-title">THERE ARE TWELVE PRIME COLOURS</h3>
+      <div class="curly-border">
+        <h3 class="section-title">THERE ARE TWELVE PRIME COLOURS</h3>
+        <div class="central-row-wrapper">
           <div class="central-row">
             <div class="color-block-wrapper">
               <div class="colour-block colour1"></div>
@@ -102,7 +105,8 @@
               <div class="colour-block colour12"></div>
             </div>
           </div>
-        <p class="symbols-section-text">In Our Colours We Connect to Our Inner Being, Also Called Our Soul.</p>
+        </div>
+        <p class="section-text">In Our Colours We Connect to Our Inner Being, Also Called Our Soul.</p>
       </div>
     </div>
 	</div>
@@ -110,15 +114,17 @@
 <div class="row">
 	<div class="col-12 my-col">
 		<div class="artistic-section">
-      <div class="section-border">
-        <h3 class="artistic-section-title">THERE ARE FOUR ARTISTIC TYPES</h3>
+      <div class="curly-border">
+        <h3 class="section-title">THERE ARE FOUR ARTISTIC TYPES</h3>
+        <div class="central-row-wrapper">
           <div class="central-row">
             <img src="../../assets/newAssets/Frame6/Artistry-Architectural.png" class="artistic-symbols" alt="">
             <img src="../../assets/newAssets/Frame6/Artistry-Sculptural.png" class="artistic-symbols" alt="">
             <img src="../../assets/newAssets/Frame6/Artistry-Harmonic.png" class="artistic-symbols" alt="">
             <img src="../../assets/newAssets/Frame6/Artistry-Composite.png" class="artistic-symbols" alt="">
           </div>
-        <p class="artistic-section-text">In Our Artistries We Connect to Our Surroundings,
+        </div>
+        <p class="section-text">In Our Artistries We Connect to Our Surroundings,
           Taking Our Place in the World of Art.</p>
       </div>
     </div>
@@ -127,8 +133,8 @@
 <div class="row">
 	<div class="col-12 my-col">
 		<div class="combine-section">
-      <div class="section-border">
-        <h3 class="combine-section-title">YOU PERSONALLY COMBINE</h3>
+      <div class="curly-border">
+        <h3 class="section-title">YOU PERSONALLY COMBINE</h3>
           <div class="blocks-wrapper">
             <div class="artistic-block">
               <span class="artistic-block-title">ONE</span>
@@ -156,10 +162,12 @@
 <div class="row">
 	<div class="col-12 my-col">
 		<div class="last-section">
-      <div class="section-border">
+      <div class="last-section-border curly-border">
         <div class="text-heading-logo"></div>
-        <div class="central-block"></div>
-        <p class="last-section-text">Self-Determine Your Style, Colour Element & Artistry. Deepen Your Understanding of Self.</p>
+        <div class="central-row-wrapper">
+          <div class="central-block central-row"></div>
+        </div>
+        <p class="section-text">Self-Determine Your Style, Colour Element & Artistry. Deepen Your Understanding of Self.</p>
       </div>
     </div>
 	</div>
