--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -55,22 +55,22 @@
         	<div class="nav-icon-cart nav-icon"></div>
         </a>
       </li>
-       <li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="#" (click)="openModalRegister()">Register</a>
       </li>
        <li class="nav-item">
         <a class="nav-link" href="#" (click)="openModalLogin()">Login</a>
       </li>
-      <li class="nav-item dropdown" dropdown>
-        <a class="nav-link dropdown-toggle" dropdownToggle href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown" *dropdownMenu>
-          <a class="dropdown-item" href="#">User</a>
-          <a class="dropdown-item" href="#">Premium user</a>
-          <a class="dropdown-item" href="#">Admin</a>
-        </div>
-      </li>
+      <!--<li class="nav-item dropdown" dropdown>-->
+        <!--<a class="nav-link dropdown-toggle" dropdownToggle href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+          <!--Dropdown-->
+        <!--</a>-->
+        <!--<div class="dropdown-menu" aria-labelledby="navbarDropdown" *dropdownMenu>-->
+          <!--<a class="dropdown-item" href="#">User</a>-->
+          <!--<a class="dropdown-item" href="#">Premium user</a>-->
+          <!--<a class="dropdown-item" href="#">Admin</a>-->
+        <!--</div>-->
+      <!--</li>-->
     </ul>
   </div>
 </nav>
