Add users page.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         <a class="nav-link" href="#">ABOUT<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">SHOP</a>
+        <a class="nav-link" routerLink="/users">USERS</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">LEARN</a>
