--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -1,3 +1,19 @@
-<p>
-  users-list works!
-</p>
+<div class="row">
+  <div class="col-12 my-col">
+    <div class="table-wrapper">
+      <nav class="navbar-user">
+        <button>+CREATE</button>
+      </nav>
+      <table style="width:100%">
+      <tr>
+        <th>User</th>
+        <th>User Role</th>
+        <th>Save changes</th>
+        <th>Delete user</th>
+      </tr>
+      <tr app-user *ngFor="let user of users" [user]="user"></tr>
+    </table>
+    </div>
+  </div>
+</div>
+
