Make profile componnt

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -42,7 +42,8 @@ nav {
       li.nav-item {
         a.nav-link {
           padding: 5px;
-          font-size: 14px
+          font-size: 14px;
+          cursor: pointer;
         }
       }
     }
