--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -30,9 +30,6 @@
       <li class="nav-item">
         <a class="nav-link" href="#">QUIZ</a>
       </li>
-	  <li class="nav-item">
-        <a class="nav-link" href="#">SERVICES</a>
-      </li>
     </ul>
      <ul class="navbar-nav">
       <li class="nav-item">
@@ -41,7 +38,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" routerLink="/profile">
         	<div class="nav-icon-settings nav-icon"></div>
         </a>
       </li>
@@ -56,10 +53,10 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" (click)="openModalRegister()">Register</a>
+        <a class="nav-link" (click)="openModalRegister()">REGISTER</a>
       </li>
        <li class="nav-item">
-        <a class="nav-link" href="#" (click)="openModalLogin()">Login</a>
+        <a class="nav-link" (click)="openModalLogin()">LOGIN</a>
       </li>
       <!--<li class="nav-item dropdown" dropdown>-->
         <!--<a class="nav-link dropdown-toggle" dropdownToggle href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
