--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -7,6 +7,10 @@
   display: flex;
   flex-wrap: wrap;
   padding: 30px;
+  .error {
+    font-size: 16px;
+    color: red;
+  }
   .photo {
     width: 50%;
     text-align: center;
@@ -15,9 +19,13 @@
     justify-content: center;
     align-items: center;
     .avatar {
-      width: 250px;
+      width: 80%;
+      max-width: 300px;
+      min-width: 150px;
       height: auto;
+      max-height: 350px;
       margin: 0 auto;
+      object-fit: contain;
     }
     .inputfile {
       width: 0.1px;
@@ -37,6 +45,8 @@
       border-radius: 5px;
       margin-top: 15px;
       transition: all .2s ease;
+      display: flex;
+      flex-wrap: wrap;
     }
     .inputfile:focus + label,
     .inputfile + label:hover {
@@ -48,7 +58,6 @@
     width: 50%;
     .username {
       font-size: 18px;
-      font-weight: 600;
       margin-bottom: 25px;
     }
     input {
@@ -78,6 +87,35 @@
       &:focus, &:active {
         outline: none;
       }
+    }
+    .btn:focus, .btn-success:focus {
+      box-shadow: none;
+    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .profile-wrapper {
+    flex-direction: column;
+    justify-content: center;
+    .photo {
+      flex:1;
+      margin: 0 auto;
+      width: 100%;
+      .inputfile + label {
+        margin-top: 20px;
+      }
+    }
+    .info {
+      flex:1;
+      width: 100%;
+      .username {
+        margin-bottom: 15px;
+        margin-top: 15px;
+      }
+    }
+    .save-wrapper {
+      margin-top: 20px;
     }
   }
 }
